--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,3 +55,71 @@ a:hover, a:focus {
 .btn-white {
     background-color: #fff;
 }
+
+.mont-b {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.popps-r {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.popps-sb {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Aileron regular';
+    src: url("/fonts/Aileron-Regular.otf") format("opentype");
+}
+
+@font-face {
+    font-family: 'Aileron bold';
+    src: url("/fonts/Aileron-Bold.otf") format("opentype");
+}
+
+.ail-r {
+    font-family: 'Aileron regular', Arial, Helvetica, sans-serif;
+}
+
+.ail-b {
+    font-family: 'Aileron bold', Arial, Helvetica, sans-serif;
+}
+
+
+/* --------- Font sizing ---------*/
+
+.pt-14 {
+    font-size: 1.163em;
+}
+
+.pt-16 {
+    font-size: 1.33em;
+}
+
+.pt-18 {
+    font-size: 1.5em;
+}
+
+.pt-22 {
+    font-size: 1.8275em;
+}
+
+.pt-30 {
+    font-size: 2.49375em;
+}
+
+.pt-40 {
+    font-size: 3.325em;
+}
+
+.pt-55 {
+    font-size: 4.571875em;
+}
