--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -2,10 +2,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 <title><%= title %></title>
-<link rel="shortcut icon" href="" type="image/x-icon">
+<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<!-- fonts links -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="/css/footerMobile.css" type="text/css">
 <link rel="stylesheet" href="/css/footerTablet.css" type="text/css">
 <link rel="stylesheet" href="/css/footerDesktop.css" type="text/css">
+<script defer src="https://player.vimeo.com/api/player.js"></script>
 <% if (styles && styles.length > 0) { %>
     <% styles.forEach(style => { %>
      <link rel="stylesheet" href="/css/<%= style %>.css" type="text/css">       
