--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navbar-expand-md d-flex flex-row justify-content-center">
+    <nav class="navbar navbar-expand-md d-flex flex-row justify-content-center mb-7">
         <a class="navbar-brand" href="/">
             <img src="/img/t2f_logo.png" alt="Take2Films Logo">
         </a>
@@ -9,16 +9,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-pwhite" href="#">Inicio</a>
+                    <a class="nav-link text-pwhite popps-r pt-16" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-pwhite" href="#nosotros">Nosotros</a>
+                    <a class="nav-link text-pwhite popps-r pt-16" href="#nosotros">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-pwhite" href="#aliados">Aliados</a>
+                    <a class="nav-link text-pwhite popps-r pt-16" href="#aliados">Aliados</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-pwhite" href="#contacto">Contáctanos</a>
+                    <a class="nav-link text-pwhite popps-r pt-16" href="#contacto">Contáctanos</a>
                 </li>
             </ul>
         </div>
