--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,7 +6,7 @@
 <body class="bg-pblack">
     <%- include('./includes/header') %>
     <main>
-        <section class="container-fluid">
+        <section class="container-fluid" id="start">
             <div class="row parallax-section">
                 <article class="col-12 col-md-6 parallax-article bg-img-projects d-flex justify-content-center align-items-center">
                     <div class="caption-container p-3">
@@ -687,7 +687,7 @@
                 <h3 class="text-center text-uppercase text-pwhite mont-b pt-55">contáctanos</h3>
             </div>
             <div class="row d-flex justify-content-center form-wrapper">
-                <form class="col-md-8" action="/users/contact" method="post">
+                <form class="col-md-8 fadeInUpBig animated" action="/users/contact" method="post">
                     <div class="row d-flex flex-wrap justify-content-center mb-7">
                         <h5 class="text-center text-pwhite ail-r pt-18">Déjanos contar tu historia!</h5>
                     </div>
