--- a/public/css/homeDesktop.css
+++ b/public/css/homeDesktop.css
@@ -266,7 +266,7 @@ div.modal-header {
     margin-top: 5vw;
 }
 
-/* CSS to add blur effect */
+/*------- CSS to add blur effect ------*/
 .blur-background {
     filter: blur(10px);
 }
@@ -279,3 +279,51 @@ div.modal-header {
 .modal.fade.show .modal-dialog {
     transform: translate(0, 0);
 }
+
+/*------- animations ------*/
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeInUpBig {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(2000px);
+      transform: translateY(2000px);
+    }
+  
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+    }
+  }
+  
+  @keyframes fadeInUpBig {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(2000px);
+      -ms-transform: translateY(2000px);
+      transform: translateY(2000px);
+    }
+  
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+      transform: translateY(0);
+    }
+  }
+  
+  .fadeInUpBig {
+    -webkit-animation-name: fadeInUpBig;
+    animation-name: fadeInUpBig;
+  }
+
+  article:hover div a {
+    font-size: 4.58em;
+  }
