--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-pwhite popps-r pt-16" href="#">Inicio</a>
+                    <a class="nav-link text-pwhite popps-r pt-16" href="#start">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-pwhite popps-r pt-16" href="#nosotros">Nosotros</a>
