--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -7,6 +7,20 @@
             <span class="navbar-toggler-icon text-pwhite"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav fixed-navlinks">
+                <li class="nav-item">
+                    <a class="nav-link text-pwhite popps-r pt-14" href="#start">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-pwhite popps-r pt-14" href="#nosotros">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-pwhite popps-r pt-14" href="#aliados">Aliados</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-pwhite popps-r pt-14" href="#contacto">Contáctanos</a>
+                </li>
+            </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link text-pwhite popps-r pt-14" href="#start">Inicio</a>
