Fixed minor details

--- a/public/css/homeDesktop.css
+++ b/public/css/homeDesktop.css
@@ -378,6 +378,7 @@ div.bio-text {
 }
 
 #contacto > div.form-wrapper > form > div.btn-wrapper > button.btn {
+    font-size: 64.28%;
     height: 2.1052vw;
     width: 4.3157vw;
 }
