--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -444,7 +444,7 @@
                 <div class="col-md-9">
                     <div class="row d-flex flex-wrap justify-content-center mb-42px staff-row-wrapper">
                         <div class="card-wrapper d-flex justify-content-center to-blur">
-                            <img class=".card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/Juan Tobon pepino CEO  242 x 242.png" alt="JUAN TOBÓN PEPINO">
+                            <img class="card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/Juan Tobon pepino CEO  242 x 242.png" alt="JUAN TOBÓN PEPINO">
                             <div class="staff-caption wrapper-1">
                                 <a class="text-center text-pwhite" href="" data-bs-toggle="modal" data-bs-target="#juanT-bio">
                                     <h5 class="popps-sb pt-16"><p>JUAN TOBÓN</p>PEPINO</h5>
@@ -476,7 +476,7 @@
                             </div>
                         </div>
                         <div class="card-wrapper d-flex justify-content-center  to-blur">
-                            <img class=".card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/Maria delgado CEO  242 x 242.png" alt="MARIA DELGADO">
+                            <img class="card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/Maria delgado CEO  242 x 242.png" alt="MARIA DELGADO">
                             <div class="staff-caption wrapper-1">
                                 <a class="text-center text-pwhite" href="" data-bs-toggle="modal" data-bs-target="#mariaD-bio">
                                     <h5 class="popps-sb pt-16 mb-42px">MARIA DELGADO</h5>
@@ -508,7 +508,7 @@
                             </div>
                         </div>
                         <div class="card-wrapper d-flex justify-content-center  to-blur">
-                            <img class=".card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/jeiver pinto director guionista  242 x 242.png" alt="JEIVER PINTO">
+                            <img class="card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/jeiver pinto director guionista  242 x 242.png" alt="JEIVER PINTO">
                             <div class="staff-caption wrapper-1">
                                 <a class="text-center text-pwhite" href="" data-bs-toggle="modal" data-bs-target="#jeiverP-bio">
                                     <h5 class="popps-sb pt-16 mb-42px">JEIVER PINTO</h5>
@@ -539,7 +539,7 @@
                             </div>
                         </div>
                         <div class="card-wrapper d-flex justify-content-center to-blur">
-                            <img class=".card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/laura crismatt directora creativa 242 x 242.png" alt="LARUA CRISMATT">
+                            <img class="card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/laura crismatt directora creativa 242 x 242.png" alt="LARUA CRISMATT">
                             <div class="staff-caption wrapper-1">
                                 <a class="text-center text-pwhite" href="" data-bs-toggle="modal" data-bs-target="#lauraC-bio">
                                     <h5 class="popps-sb pt-16 mb-42px">LARUA CRISMATT</h5>
@@ -569,7 +569,7 @@
                     </div>
                     <div class="row d-flex flex-wrap justify-content-center staff-row-wrapper">
                         <div class="card-wrapper d-flex justify-content-center align-items-center to-blur">
-                            <img class=".card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/felipe camargo editor 242 x 242.png" alt="FELIPE CAMARGO">
+                            <img class="card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/felipe camargo editor 242 x 242.png" alt="FELIPE CAMARGO">
                             <div class="staff-caption">
                                 <a class="text-center text-pwhite" href="" data-bs-toggle="modal" data-bs-target="#felipeC-bio">
                                     <h5 class="popps-sb pt-16">FELIPE CAMARGO</h5>
@@ -599,7 +599,7 @@
                             </div>
                         </div>
                         <div class="card-wrapper d-flex justify-content-center align-items-center to-blur">
-                            <img class=".card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/laura bonilla directora creativa 242 x 242.png" alt="LAURA BONILLA">
+                            <img class="card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/laura bonilla directora creativa 242 x 242.png" alt="LAURA BONILLA">
                             <div class="staff-caption">
                                 <a class="text-center text-pwhite" href="" data-bs-toggle="modal" data-bs-target="#lauraB-bio">
                                     <h5 class="popps-sb pt-16">LAURA BONILLA</h5>
@@ -628,7 +628,7 @@
                             </div>
                         </div>
                         <div class="card-wrapper d-flex justify-content-center align-items-center to-blur">
-                            <img class=".card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/Valentina cerci community manegar 242 x 242.png" alt="VALENTINA CICERI">
+                            <img class="card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/Valentina cerci community manegar 242 x 242.png" alt="VALENTINA CICERI">
                             <div class="staff-caption">
                                 <a class="text-center text-pwhite" href="" data-bs-toggle="modal" data-bs-target="#valentinaC-bio">
                                     <h5 class="popps-sb pt-16">VALENTINA CICERI</h5>
@@ -658,7 +658,7 @@
                             </div>
                         </div>
                         <div class="card-wrapper d-flex justify-content-center align-items-center to-blur">
-                            <img class=".card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/Mario Ibarra 242 x 242.png" alt="MARIO IBARRA">
+                            <img class="card-img-bg" src="/img/fotos version 1900x--/fotos Equipo seccion 4/Mario Ibarra 242 x 242.png" alt="MARIO IBARRA">
                             <div class="staff-caption">
                                 <a class="text-center text-pwhite" href="" data-bs-toggle="modal" data-bs-target="#marioI-bio">
                                     <h5 class="popps-sb pt-16">MARIO IBARRA</h5>
@@ -746,7 +746,7 @@
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center align-items-center btn-wrapper">
-                        <button type="submit" class="btn btn-white text-center text-black popps-sb pt-14">Enviar</button>
+                        <button type="submit" class="btn btn-white text-center text-black popps-sb">Enviar</button>
                     </div>
                 </form>
             </div>
