--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -682,7 +682,7 @@
                                     <div class="modal-body d-flex justify-content-center align-items-center">
                                         <div class="bio-text">
                                             <p class="text-pwhite text-justfy ail-r pt-18">Mario Ibarra Guerrero, profesional en publicidad  y Mercadeo con más de 15 años de experiencia en el medio de las marcas.</p>
-                                            <p class="text-pwhite text-justfy ail-r pt-18">Trabajo como diseñador para in house en el sector farmaceutico desarrollando nuevos productos OTC y veterinarios, trabajo en agencia de casting perfilando y coordinando personal para reconocidas producciones de television, comerciales y agencias BTLS representando marcas en sus diversas activaciones.</p>
+                                            <p class="text-pwhite text-justfy ail-r pt-18">Trabajo como diseñador para in house en el sector farmacéutico desarrollando nuevos productos OTC y veterinarios, trabajo en agencia de casting perfilando y coordinando personal para reconocidas producciones de televisión, comerciales y agencias BTLS representando marcas en sus diversas activaciones.</p>
                                             <p class="text-pwhite text-justfy ail-r pt-18">Actualmente representa, perfila, coordina y capacita nuevos talentos en producciones de comerciales, eventos para agencias BTLS en sus diversas activaciones de marcas.</p>
                                         </div>
                                     </div>
