--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -3,10 +3,10 @@
         <div class="contact-details col-md-4 d-flex flex-wrap align-items-center mb-4">
             <div class="row col-md-12 d-flex flex-wrap mb-3 align-items-center">
                 <div class="col-md-2">
-                    <a class="text-pwhite text-center ail-r" href="https://wa.me/573208137288"><i class="bi bi-whatsapp pt-30"></i></a>
+                    <a class="text-pwhite text-center kabel-med" href="https://wa.me/573208137288"><i class="bi bi-whatsapp pt-30"></i></a>
                 </div>
                 <div class="col-md-6">
-                    <a class="text-pwhite ail-r pt-16" href="https://wa.me/573208137288">+57 320 813 72 88</a> 
+                    <a class="text-pwhite kabel-med pt-16" href="https://wa.me/573208137288">+57 320 813 72 88</a> 
                 </div>
             </div>
             <div class="row col-md-12 d-flex flex-wrap align-items-center">
@@ -14,7 +14,7 @@
                     <a class="text-pwhite text-center" href="mailto:taketwo2films@gmail.com"><i class="bi bi-envelope pt-30"></i></a>
                 </div>
                 <div class="col-md-8">
-                    <a class="text-pwhite ail-r pt-16" href="mailto:taketwo2films@gmail.com">Email: taketwo2films@gmail.com</a>
+                    <a class="text-pwhite kabel-med pt-16" href="mailto:taketwo2films@gmail.com">Email: taketwo2films@gmail.com</a>
                 </div>
             </div>
         </div>
