--- a/public/css/headerDesktop.css
+++ b/public/css/headerDesktop.css
@@ -4,14 +4,15 @@ header {
     position: relative;
 }
 .navbar {
+    --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
     position: absolute;
     top: 1.1447vh; /* 21.75px / 1900px * 100 */
     width: 100%;
 }
 .navbar-brand {
     height: 7.3158vh; /* 139px / 1900px * 100 */
-    left: 40vw;
     margin: auto;
+    margin-top: 3vw;
     position: relative;
     width: 17.8421vw; /* 339px / 1900px * 100 */
 }
@@ -19,13 +20,30 @@ header {
     width: 100%;
     height: auto;
 }
+
+.navbar-toggler {
+    color: transparent;
+    display: block;
+    margin-right: 2vw;
+    position: fixed;
+    right: 0.05vw;
+    top: 2vw;
+    z-index: 999;
+}
+
+.navbar-toggler, .navbar-toggler:active, .navbar-toggler:focus, .navbar-toggler:hover {
+    border: none;
+}
+
 .navbar-nav {
-    position: absolute;
-    bottom: 1.3158vh; /* 50px / 1900px * 100 */
-    right: 10.2632vw; /* 195px / 1900px * 100 */
+    flex-direction: column;
+    position: fixed;
+    right: 2.7vw;
+    top: 3.8vw;
+    z-index: 999;
 }
 .nav-link {
-    margin-left: 1.8421vw; /* 35px / 1900px * 100 */
+    text-align: end;
 }
 
 .nav-link:visited {
@@ -36,18 +54,6 @@ header {
     color: cyan;
 }
 
-.fixed-navlinks {
-    bottom: 47.2vw;
-    position: fixed;
-    right: 11vw;
-    z-index: 9999;
-    opacity: 0;
-}
-
-.fixed-navlinks:hover {
-    opacity: 1;
-}
-
-.fixed-navlinks:hover + .ml-auto {
-    opacity: 0;
+.navbar-toggler:hover ~ .navbar {
+    --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 255, 255%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
 }
