--- a/public/css/headerMobile.css
+++ b/public/css/headerMobile.css
@@ -1,12 +1,13 @@
 @media (max-width: 768px) {
     .navbar-collapse {
         justify-content: flex-end;
+        text-align: end;
     }
-    .navbar-nav {
+/*     .navbar-nav {
         position: static;
         margin: 0;
-        padding-top: 1.1447vh; /* 21.75px / 1900px * 100 */
-    }
+        padding-top: 1.1447vh;
+    } */
     .nav-link {
         margin-left: 0;
     }
