--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -1,38 +1,24 @@
-<header>
-    <nav class="navbar navbar-expand-md d-flex flex-row justify-content-center mb-7">
+<header id="start">
+    <nav class="navbar d-flex flex-row justify-content-center mb-7">
         <a class="navbar-brand" href="/">
             <img src="/img/t2f_logo.png" alt="Take2Films Logo">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon text-pwhite"></span>
+        <button class="navbar-toggler shdw" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav fixed-navlinks">
+            <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-pwhite popps-r pt-14" href="#start">Inicio</a>
+                    <a class="nav-link text-pwhite kabel-med pt-14 shdw" href="#start">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-pwhite popps-r pt-14" href="#nosotros">Nosotros</a>
+                    <a class="nav-link text-pwhite kabel-med pt-14 shdw" href="#nosotros">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-pwhite popps-r pt-14" href="#aliados">Aliados</a>
+                    <a class="nav-link text-pwhite kabel-med pt-14 shdw" href="#aliados">Aliados</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-pwhite popps-r pt-14" href="#contacto">Contáctanos</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link text-pwhite popps-r pt-14" href="#start">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-pwhite popps-r pt-14" href="#nosotros">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-pwhite popps-r pt-14" href="#aliados">Aliados</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-pwhite popps-r pt-14" href="#contacto">Contáctanos</a>
+                    <a class="nav-link text-pwhite kabel-med pt-14 shdw" href="#contacto">Contáctanos</a>
                 </li>
             </ul>
         </div>
