--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -1,7 +1,7 @@
 <header id="start">
     <nav class="navbar d-flex flex-row justify-content-center mb-7">
         <a class="navbar-brand" href="/">
-            <img src="/img/t2f_logo.png" alt="Take2Films Logo">
+            <img src="/img/animacion logo T2F version1.2 pag web.gif" alt="Take2Films Logo">
         </a>
         <button class="navbar-toggler shdw" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
