--- a/public/css/headerDesktop.css
+++ b/public/css/headerDesktop.css
@@ -10,11 +10,11 @@ header {
     width: 100%;
 }
 .navbar-brand {
-    height: 7.3158vh; /* 139px / 1900px * 100 */
+    height:10.21vh; /*7.3158 139px / 1900px * 100 */
     margin: auto;
     margin-top: 3vw;
     position: relative;
-    width: 17.8421vw; /* 339px / 1900px * 100 */
+    width: 20.7368vw; /*17.8421vw 339px / 1900px * 100 */
 }
 .navbar-brand img {
     width: 100%;
